# query_engine_testing

./: .envrc  .gitignore  README.md
datafusion/: .gitignore  Cargo.toml  run.sh
datafusion/src/: main.rs
datasets/100m-dataset/: README.md
julia-dataframe/: README.md  benchmark.jl  run.sh
polars/: .gitignore  Cargo.toml  run.sh
polars/src/: main.rs
