[package]
name = "datafusion_playground"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "^1.5.0"
rand = "^0.8.3"
csv = "^1.1.6"
glob = "^0.3.0"
# datafusion has unreleased bug fixes on joins that are necessary. Needs custom version of arrow to function
datafusion = { git = "https://github.com/apache/arrow-datafusion", branch = "master" }

[profile.release]
debug = true
