[package]
name = "polars-test"
version = "0.1.0"
authors = ["Des Preston <des.preston@tanium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version="0.13.3", git = "https://github.com/ritchie46/polars", features = ["parquet", "lazy"] }
rand = "0.8.3"
glob = "^0.3.0"
snmalloc-rs = {version = "0.2", features= ["cache-friendly"]}
